package Hero;

message HeroInfo
{
	required uint32 heroid			= 1;
	required uint32 character		= 2;//品质
	repeated uint32 born			= 3;//初始属性
	required uint32 skillid			= 4;//战法特效
	required float skillco			= 5;//战法系数
	required uint32 skillrange		= 6;//战法范围
	required uint32 skilltime		= 7;//可释放战法次数
	repeated uint32 tacticalarea1	= 8;//加强战术
	repeated uint32 tacticalarea2	= 9;//加强战术
	repeated uint32 tacticalarea3	= 10;//加强战术
	repeated uint32 tacticalarea4	= 11;//加强战术
	required uint32 tacticaladd		= 12;//加强战术伤害
	repeated uint32 giftarea		= 13;//平砍强化地形
	required float  giftadd			= 14;//平砍强化系数
}

message HeroInfoList
{
	repeated HeroInfo heroes		= 1;
	repeated uint32   heroExp		= 2;
	repeated float	  recruit_rate_factor = 3; //募兵速率,每级兵种的募兵速度乘以兵种系数K
	repeated float	  recruit_cost_factor = 4; //石油消耗,每级兵种的消耗乘以兵种系数L	
}