package TavernConfig;

message UnlockCondition
{
	required uint32 gateid		= 1;
	required uint32 times		= 2;
}

message SingleHero
{
	required uint32 id					= 1;
	required uint32 heroid				= 2;
	required UnlockCondition condition		= 3;
	required uint32 price				= 4;
}

message HeroRecruit
{
	repeated SingleHero heroes		= 1;
}